--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="//servedby.studads.com/ads/ads.php?t=MTg5ODI7MTI3MTI7aG9yaXpvbnRhbC5iYW5uZXI=&index=1"></script>
   </body>
 </html>
