changed font family

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <style>
       * {
         margin: 0;
-        font-family: cursive;
+        /* font-family: cursive, "Times New Roman", Times, serif; */
       }
     </style>
     <style>
