--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
     />
     <meta name="keywords" content="blog, travel, bhajan, recipe, story" />
     <meta name="category" content="travel, bhajan, recipe, story" />
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital@0;1&family=Varela&family=Varela+Round&display=swap"
       rel="stylesheet"
@@ -57,7 +61,8 @@
     <title>Gunjan's Blog</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
   </body>
 </html>
