--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       }
     </style>
 
-    <title>Gunjan's Blog</title>
+    <title>Bhajan Sangeet</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
