added svg and improved cls

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-    <script>
+    <script defer>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -17,10 +17,11 @@
     <!-- End Google Tag Manager -->
 
     <script
+      defer
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-P0SJJ39B1M"
     ></script>
-    <script>
+    <script defer>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
@@ -30,6 +31,7 @@
       gtag("config", "G-P0SJJ39B1M");
     </script>
     <script
+      defer
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6606321105150999"
       crossorigin="anonymous"
@@ -63,6 +65,7 @@
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <script
+      defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
